# roadmc

./: .gitignore  ADVISOR_BRIEFING.md  AGENTS.md  HANDOFF.md  HANDOFF_交接文档_阶段一.md  LICENSE  README.en.md  README.md  TECHNICAL_REPORT.md  pyproject.toml  temp_test.txt  test.md  修复报告_阶段一.md  修复报告_阶段一_完整版.md  待实现清单.md  方法.md  方法2.md  项目交接文档.md  项目规划.md
.sisyphus/: ralph-loop.local.md
data/benchmark_test/: metadata.json
data/benchmark_test2/: metadata.json
data/credibility_v1_5k/: class_budget_manifest.json
data/synthetic_dense/: metadata.json
data/synthetic_output/: class_weights.npy  class_weights.pt  expansion_metadata.json
docs/: generate_architecture.py  generate_architecture_grid.py  generate_data_pipeline.py  generate_model_pipeline.py
laser/: metadata.json
output/: m2s_road_sample_domain_gap.json  m2s_road_sample_ground_domain_gap.json
output/credibility_v1_5k/: binary_class_weights.json  binary_class_weights.pt  curriculum_transfer_smoke.json  data_validation.json  m2s_ground_domain_gap.json  overfit_probe.json
output/pdf/: roadmc_ieee_report.aux  roadmc_ieee_report.tex  roadmc_ieee_report_cn.aux  roadmc_ieee_report_cn.tex  roadmc_technical_report_cn.aux  roadmc_technical_report_cn.out  roadmc_technical_report_cn.tex
output/ppt/: roadmc_advisor_briefing_claude_style.pptx.inspect.ndjson  roadmc_advisor_briefing_claude_style_before_layout_refine.pptx  roadmc_advisor_briefing_claude_style_layout_refined.pptx  roadmc_advisor_briefing_claude_style_layout_refined.pptx.inspect.ndjson  roadmc_advisor_for_teacher_editable_v1.pptx
roadmc/: __init__.py  domain_gap.py  evaluate.py  metrics.py  test_class_balance.py  test_class_budget.py  test_controlled_synthesis.py  test_curriculum.py  test_dataset_validation.py  test_domain_gap.py  test_metrics.py  test_observable_features.py  test_real_loader.py  test_sampling_policy.py  train.py
roadmc/data/: class_balance.py  curriculum.py  dataloader.py  features.py
roadmc/models/: AGENTS.md  __init__.py  model_pl.py
roadmc/models/mhc/: mhc.py  (+2 more)
roadmc/scripts/: compute_class_weights.py  diagnose_domain_gap.py  expand_synthetic_dataset.py  generate_class_budget.py  generate_synthetic.py  grid_search_binary.py  quick_diagnose.py  render_pointcloud_views.py  validate_synthetic_dataset.py
roadmc/test/: test_visualize.py
(+40 files in other folders)
