[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "roadmc"
version = "0.2.0"
description = "Physics-Simulation-Driven Road Surface Point Cloud Disease Detection"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "torch>=2.0",
    "torchvision>=0.15",
    "torchaudio>=2.0",
    "pytorch-lightning>=2.0",
    "torchmetrics>=1.0",
    "matplotlib>=3.7",
    "ipykernel>=7.2.0",
]

[project.optional-dependencies]
real = [
    "laspy[lazrs]>=2.5",
    "plyfile>=1.1",
]
pcd = [
    "open3d>=0.19",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.setuptools.packages.find]
include = ["roadmc*"]

[tool.ruff]
target-version = "py311"
line-length = 100
lint.select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
lint.ignore = ["E501", "N802", "N803", "N806"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
allow_redefinition = true

[tool.pytest.ini_options]
testpaths = ["roadmc"]
python_files = ["test_*.py"]
